--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/react": "^1.2.12",
     "@supabase/supabase-js": "^2.52.0",
+    "ai": "^4.3.19",
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "twilio": "^5.7.3",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
